--- a/css/main.css
+++ b/css/main.css
@@ -34,9 +34,11 @@
 html {
   scroll-behavior: smooth; }
 
+/*
 html, body {
-  overflow-x: hidden; }
-
+  overflow-x: hidden;
+}
+*/
 .container {
   max-width: 1140px; }
 
@@ -50,6 +52,12 @@ html, body {
   line-height: 2.5rem;
   color: inherit;
   opacity: 0.8; }
+
+header.d-print-none {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
 
 .header-social .nav-link {
   font-size: 1.25rem; }
